vcluster_versioned_docs/version-0.26.0/_partials/config/controlPlane/coredns.mdx

<details className="config-field" data-expandable="true">
<summary>

## `coredns` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns}

CoreDNS defines everything related to the coredns that is deployed and used within the vCluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-enabled}

Enabled defines if coredns is enabled

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `embedded` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-embedded}

Embedded defines if vCluster will start the embedded coredns service within the control-plane and not as a separate deployment. This is a PRO feature.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `security` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-security}

Security defines pod or container security context.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `podSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-security-podSecurityContext}

PodSecurityContext specifies security context options on the pod level.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `containerSecurityContext` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-security-containerSecurityContext}

ContainerSecurityContext specifies security context options on the container level.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-service}

Service holds extra options for the coredns service deployed within the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `spec` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;type:ClusterIP&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-service-spec}

Spec holds extra options for the coredns service

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-service-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-service-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `deployment` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment}

Deployment holds extra options for the coredns deployment deployed within the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-image}

Image is the coredns image to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `replicas` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-replicas}

Replicas is the amount of coredns pods to run.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-nodeSelector}

NodeSelector is the node selector to use for coredns.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `affinity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-affinity}

Affinity is the affinity to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `tolerations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-tolerations}

Tolerations are the tolerations to apply to the pod.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-resources}

Resources are the desired resources for coredns.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limits` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:1000m memory:170Mi&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-resources-limits}

Limits are resource limits for the container

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `requests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">map&#91;cpu:20m memory:64Mi&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-resources-requests}

Requests are minimal resources that will be consumed by the container

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `pods` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-pods}

Pods is additional metadata for the coredns pods.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-pods-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-pods-labels}

Labels are extra labels for this resource.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `annotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-annotations}

Annotations are extra annotations for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-labels}

Labels are extra labels for this resource.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `topologySpreadConstraints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default">&#91;map&#91;labelSelector:map&#91;matchLabels:map&#91;k8s-app:vcluster-kube-dns&#93;&#93; maxSkew:1 topologyKey:kubernetes.io/hostname whenUnsatisfiable:DoNotSchedule&#93;&#93;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-deployment-topologySpreadConstraints}

TopologySpreadConstraints are the topology spread constraints for the CoreDNS pod.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `overwriteConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-overwriteConfig}

OverwriteConfig can be used to overwrite the coredns config

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `overwriteManifests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-overwriteManifests}

OverwriteManifests can be used to overwrite the coredns manifests used to deploy coredns

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `priorityClassName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#coredns-priorityClassName}

PriorityClassName specifies the priority class name for the CoreDNS pods.

</summary>



</details>


</details>
